<resources>
    <string name="title_activity_main">VKM</string>
    <string name="app_name">VKM</string>
    <string name="tab_downloaded">Downloaded</string>
    <string name="tab_in_progress">In progress</string>
    <string name="tab_queue">Waiting for download</string>
    <string name="tab_user">User</string>
    <string name="tab_group">Group</string>
    <string name="tab_composition">Tracks</string>
    <string name="search_button">Go</string>
    <string name="search_placeholder">Search</string>
    <string name="search_hint">search..</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="empty_password_login">Login or password cannot be empty</string>
    <string name="login_button">Login</string>
    <string name="search_activity_title">Search for music</string>
    <string name="history_activity_title">History</string>
    <string name="clear_downloaded_list_setting">Clear downloaded list</string>
    <string name="run_button_setting">run</string>
    <string name="clear_download_queue_setting">Clear download queue</string>
    <string name="stop_current_download_setting">Stop current download</string>
    <string name="save_all_lists_setting">Save all lists</string>
    <string name="load_lists_setting">Load lists</string>
    <string name="commands_and_settings_label">Commands and settings</string>
    <string name="enable_download_all_button">Enable download all button</string>
    <string name="disabled">disabled</string>
    <string name="enabled">enabled</string>
    <string name="remove_all_downloaded_music">Remove all downloaded music</string>
    <string name="remove_all_settings">Remove all settings</string>
    <string name="start_download">Start download</string>
    <string name="rehash_downloaded_composition">Rehash downloaded composition</string>
    <string name="show_dangerous_commands">Show dangerous commands</string>
    <string name="restore_downloaded_list">Restore downloaded list</string>
    <string name="test">test</string>
    <string name="enable_text_suggestions">Enable text suggestions</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="select_proxy">Select proxy</string>
    <string name="no_proxy">No proxy</string>
    <string name="resume_download">Resume download</string>
    <string name="vkm_music_service_desc">Vkm Music Playing service</string>
    <string name="skip_to_previous_track">Skip to previous track</string>
    <string name="play_stop_pause_current_track">Play, stop, pause current track</string>
    <string name="skip_to_next_track">Skip to next track</string>
    <string name="currently_playing_title">Currently playing</string>
    <string name="enable_developer_mode">Enable developer mode</string>
    <string name="logout">Logout</string>
    <string name="album_cover">Album cover</string>
    <string name="listen_to_album">Listen to album</string>
    <string name="use_proxy">Use proxy</string>

    <!--colors-->
    <color name="white">#FFFFFF</color>
</resources>
