<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:textColor="@android:color/holo_red_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/error"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:hint="@string/login_hint"
            android:ems="10"
            android:id="@+id/loginName"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"/>

    <Button
            android:text="@string/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit"/>
</LinearLayout>
