<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/ic_play"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/middle"
            android:contentDescription="@string/album_cover"
            android:id="@+id/cover"/>

    <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            app:srcCompat="@drawable/ic_next_player"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/listen_to_album"
            android:id="@+id/action"/>


    <LinearLayout android:orientation="vertical"
                  android:id="@id/middle"
                  android:layout_toEndOf="@id/cover"
                  android:layout_toStartOf="@id/action"
                  android:layout_alignParentBottom="true"
                  android:layout_alignParentTop="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
        <TextView
                android:text="@string/test"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/artist"/>


        <TextView
                android:text="@string/test"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/name"/>
    </LinearLayout>


</RelativeLayout>
