<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipeCatcher"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
           >

        <!-- enable suggestions all button -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/enable_text_suggestions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Switch
                    android:id="@+id/enableSuggestions"
                    android:textOn="@string/enabled"
                    android:textOff="@string/disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- enable proxy -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/use_proxy"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
            />

            <Switch
                    android:id="@+id/useProxy"
                    android:textOn="@string/enabled"
                    android:textOff="@string/disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- stop current download -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/stop_current_download_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Button
                    android:text="@string/run_button_setting"
                    android:id="@+id/stopDownload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    tools:layout_editor_absoluteX="296dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- start download -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/start_download"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Button
                    android:text="@string/run_button_setting"
                    android:id="@+id/startDownload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    tools:layout_editor_absoluteX="296dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- clear downloaded list -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/clear_downloaded_list_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Button
                    android:text="@string/run_button_setting"
                    android:id="@+id/clearDownloaded"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    tools:layout_editor_absoluteX="296dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- clear queue -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/clear_download_queue_setting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Button
                    android:text="@string/run_button_setting"
                    android:id="@+id/clearQueue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    tools:layout_editor_absoluteX="296dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- show dangerous commands -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/show_dangerous_commands"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Switch
                    android:id="@+id/showDangerousCommands"
                    android:textOn="@string/enabled"
                    android:textOff="@string/disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:checked="false"
                    tools:layout_editor_absoluteX="344dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Rehash downloaded list -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/rehash_downloaded_composition"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Button
                    android:text="@string/run_button_setting"
                    android:id="@+id/rehashDownloaded"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    tools:layout_editor_absoluteX="296dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Restore downloaded list -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/restore_downloaded_list"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Button
                    android:text="@string/run_button_setting"
                    android:id="@+id/restoreDownloaded"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    tools:layout_editor_absoluteX="296dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- clear music dir -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            <TextView
                    android:text="@string/remove_all_downloaded_music"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    />

            <Button
                    android:text="@string/run_button_setting"
                    android:id="@+id/clearMusicDir"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    tools:layout_editor_absoluteX="296dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
