<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@id/middle"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_play"
            android:visibility="invisible"
            android:layout_above="@+id/middle"
            android:contentDescription="@string/album_cover"
            android:id="@+id/cover"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/ic_list"
            android:contentDescription="@string/listen_to_album"
            android:id="@+id/action"
            android:adjustViewBounds="false"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:text="@string/test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cover"
            app:layout_constraintEnd_toStartOf="@+id/action"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            app:layout_constraintHorizontal_bias="0"/>
</android.support.constraint.ConstraintLayout>


