<?xml version="1.0" encoding="utf-8"?>
<vkm.vkm.ScreenSwiper
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/swipeCatcher"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:hint="@string/search_hint"
                    android:ems="10"
                    android:id="@+id/search"
                    android:layout_weight="8.68"/>

            <Button
                    android:text="@string/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_weight="1"/>
        </LinearLayout>

        <vkm.vkm.StringSwiper
                android:id="@+id/tabsSwiper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        </vkm.vkm.StringSwiper>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ListView
                    android:id="@+id/resultList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            <include
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    layout="@layout/composition_list_element"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/compositionInProgress"/>

            <ProgressBar
                    app:layout_constraintTop_toBottomOf="@id/compositionInProgress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/downloadProgress"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    app:layout_constraintTop_toBottomOf="@id/downloadProgress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/resumeDownloadButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resume_download"/>
        </android.support.constraint.ConstraintLayout>


    </LinearLayout>
</vkm.vkm.ScreenSwiper>

